--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             <div class="icon-box icon-box-pink">
               <div class="icon"><i class="bx bx-paint"></i></div>
               <h4 class="title"><a href="">Web Design</a></h4>
-              <p class="description">All of our designs are written from scratch and allow for maximum customization. This is not a CMS provider.</p>
+              <p class="description">All of our designs are written from a code-only approach to allow for maximum customization. This is not a CMS provider.</p>
             </div>
           </div>
 
