--- a/index.html
+++ b/index.html
@@ -45,28 +45,11 @@
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Partners</a></li>
-          <li><a href="#">Media</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
-            <ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="drop-down"><a href="#">Drop Down 2</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-              <li><a href="#">Drop Down 5</a></li>
-            </ul>
-          </li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="team.html">Partners</a></li>
+          <li><a href="blog.html">Media</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -99,7 +82,7 @@
       <!-- Slide 3 -->
       <div class="carousel-item">
         <div class="carousel-container">
-          <h2 class="animated fadeInDown">Community Based</h2>
+          <h2 class="animated fadeInDown">Community Focus</h2>
           <p class="animated fadeInUp">We are a community focused company. We are from this area and love to give back to our local charities! Read more below to see what charities we are affiliated with. </p>
           <a href="" class="btn-get-started animated fadeInUp">Read More</a>
         </div>
@@ -176,8 +159,8 @@
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Community Identity</a></h4>
-              <p class="description">We are Kentucky proud. With origins in Georgetown, we are now based in Lexington. Nothing makes us happier than helping businesses from our region shine!</p>
+              <h4 class="title"><a href="">Origins</a></h4>
+              <p class="description">We are Kentucky proud. We originated in Georgetown, and are now based in Lexington. Nothing makes us happier than helping businesses from our region shine!</p>
             </div>
 
             <div class="icon-box">
@@ -206,7 +189,7 @@
             <img src="img/consultation.svg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4">
-            <h3>We invite you to have a concise hour-long consultation</h3>
+            <h3>In person Consultation</h3>
             <p class="font-italic">
               This is where we talk about your business and get a strong feel for what it is that makes you unique. We then take that information and come up with a custom service plan built around your needs.
             </p>
@@ -243,7 +226,7 @@
             <ul>
               <li><i class="icofont-check"></i> Optimize written content for S.E.O.</li>
               <li><i class="icofont-check"></i> Impliment high-quality photos</li>
-              <li><i class="icofont-check"></i> Make that website dance! It lives!</li>
+              <li><i class="icofont-check"></i> Make that website dance!</li>
             </ul>
           </div>
         </div>
@@ -326,8 +309,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>About zMarkup</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <h3>Connect with us!</h3>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
               <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
