--- a/about.html
+++ b/about.html
@@ -48,7 +48,6 @@
           <li><a href="services.html">Services</a></li>
           <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="team.html">Partners</a></li>
-          <li><a href="blog.html">Media</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -193,7 +192,7 @@
         <div class="owl-carousel testimonials-carousel">
 
           <div class="testimonial-item">
-            <img src="img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
+            <img src="img/testimonials/tim.png" class="testimonial-img" alt="tim">
             <h3>Tim</h3>
             <h4>24000.org</h4>
             <p>
@@ -204,7 +203,7 @@
           </div>
 
           <div class="testimonial-item">
-            <img src="img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
+            <img src="img/testimonials/rita.png" class="testimonial-img" alt="rita">
             <h3>Rita</h3>
             <h4>Not Alone Pregnancy Center</h4>
             <p>
