footer and partners

--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="img/about.jpg" class="img-fluid" alt="">
+            <img src="img/kentucky.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
@@ -185,7 +185,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Tetstimonials</h2>
+          <h2>Recent<br>Tetstimonials</h2>
           <p>Don't just take it from us, here's what local businesses have to say about us!</p>
         </div>
 
@@ -255,8 +255,8 @@
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Hosting </a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Photography</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
           </div>
