content commit <mass>

--- a/about.html
+++ b/about.html
@@ -27,6 +27,7 @@
 
   <!-- Template Main CSS File -->
   <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/about.css">
 
 </head>
 
@@ -46,7 +47,6 @@
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="team.html">Partners</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -81,20 +81,19 @@
             <img src="img/kentucky.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
+            <h2 class= "text-center"><u>Welcome!</u></h2>
             <p class="font-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+              We are zMarkup, a grass-roots design and development studio!
             </p>
+            <h4>What do we do?</h4>
             <ul>
-              <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="icofont-check-circled"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="icofont-check-circled"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="icofont-check-circled"></i> Business branding & logo</li>
+              <li><i class="icofont-check-circled"></i> Elegant website design</li>
+              <li><i class="icofont-check-circled"></i> Advanced web advertising</li>
+              <li><i class="icofont-check-circled"></i> Automatized services</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              We strive for simplicity. Designing a web experience that flows and communicates information well is what makes us happy! If you have been searching for a studio that is easy to work with and would like a cozy place on the web to call your own, please slide us a note. We would love to collaborate with you!
             </p>
           </div>
         </div>
@@ -109,23 +108,23 @@
         <div class="row counters">
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">10</span>
-            <p>Clients</p>
+            <span data-toggle="counter-up">4.54</span>
+            <p>Billion Customers</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">23</span>
-            <p>Projects</p>
+            <span data-toggle="counter-up">1.74</span>
+            <p>Billion Websites</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">411</span>
-            <p>Hours Of Support</p>
+            <span data-toggle="counter-up">91</span><span display="inline-block">%</span>
+            <p>Customer Exposure Increase</p>
           </div>
 
           <div class="col-lg-3 col-6 text-center">
-            <span data-toggle="counter-up">2</span>
-            <p>Hard Workers</p>
+            <span data-toggle="counter-up">1</span>
+            <p>Right Decision</p>
           </div>
 
         </div>
@@ -146,31 +145,31 @@
 
           <div class="progress">
             <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">HTML <i class="val">SUCCESS</i></span>
             </div>
           </div>
 
           <div class="progress">
-            <div class="progress-bar bg-important" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">Search Engine Optimization <i class="val">100%</i></span>
+            <div class="progress-bar bg-important" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">Search Engine Optimization <i class="val">FOUND YA!</i></span>
             </div>
           </div>
 
           <div class="progress">
-            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">CSS <i class="val">95%</i></span>
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">CSS <i class="val">BEAUTIFUL</i></span>
             </div>
           </div>
 
           <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">JavaScript <i class="val">90%</i></span>
+            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">JavaScript <i class="val">INTERACTIVE</i></span>
             </div>
           </div>
 
           <div class="progress">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100">
-              <span class="skill">Photoshop <i class="val">85%</i></span>
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+              <span class="skill">Photoshop <i class="val">ELEGANT</i></span>
             </div>
           </div>
 
@@ -194,7 +193,7 @@
           <div class="testimonial-item">
             <img src="img/testimonials/tim.png" class="testimonial-img" alt="tim">
             <h3>Tim</h3>
-            <h4>24000.org</h4>
+            <h4>Non-Profit Coordinator</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               zMarkup did an amazing job on our website!  Nash had creative ideas to bring our dull website to life. He was extremely professional and very easy to work with. We recommend zMarkup to everyone!
@@ -205,7 +204,7 @@
           <div class="testimonial-item">
             <img src="img/testimonials/rita.png" class="testimonial-img" alt="rita">
             <h3>Rita</h3>
-            <h4>Not Alone Pregnancy Center</h4>
+            <h4>Charity Director</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
               The detail was amazing.   zMarkup was able to combine compassion to our clients and offer professional attention to businesses and organizations that donate to us.  I would strongly recommend zMarkup.
@@ -214,12 +213,12 @@
           </div>
 
           <div class="testimonial-item">
-            <img src="img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-            <h3>Jena Karlis</h3>
+            <img src="img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="Jane">
+            <h3>Jane</h3>
             <h4>Store Owner</h4>
             <p>
               <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-              Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+              Classy designs and very helpful! I would recommend to any business in need of a good revamping.
               <i class="bx bxs-quote-alt-right quote-icon-right"></i>
             </p>
           </div>
@@ -245,8 +244,8 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Refund Policy</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="refund.html">Refund Policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
             </ul>
           </div>
 
@@ -292,8 +291,8 @@
         &copy; Copyright <strong><span>zMarkup</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <a href="https://bootstrapmade.com/">Privacy</a> |
-        <a href="https://bootstrapmade.com/">Refund</a>
+        <a href="privacy.html">Privacy</a> |
+        <a href="refund.html">Refund</a>
       </div>
     </div>
   </footer><!-- End Footer -->
