--- a/team.html
+++ b/team.html
@@ -46,7 +46,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
           <li class="active"><a href="team.html">Partners</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -83,16 +82,13 @@
               <div class="member-img">
                 <img src="img/team/team-1.png" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href=""><i class="icofont-mobile-phone"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Jesse Thompson</h4>
                 <span>Professional Photographer</span>
-                <p>Animi est delectus alias quam repellendus nihil nobis dolor. Est sapiente occaecati et dolore. Omnis aut ut nesciunt explicabo qui. Eius nam deleniti ut omnis repudiandae perferendis qui. Neque non quidem sit sed pariatur quia modi ea occaecati. Incidunt ea non est corporis in.</p>
+                <p>Jesse is our lead photographer. He has over 5 years experience with Arial Photography as well as being very skilled in portrait photography. Whether you would like an aerial view of your business or to introduce the faces that represent you, Jesse is eager to help!</p>
               </div>
             </div>
           </div>
@@ -102,16 +98,15 @@
               <div class="member-img">
                 <img src="img/team/team-2.png" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
+                  <a href=""><i class="icofont-mobile-phone"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href=""><i class="icofont-money"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Not Alone Pregnancy Center</h4>
                 <span>Georgetown Non-Profit</span>
-                <p>Aspernatur iste esse aliquam enim et corporis. Molestiae voluptatem aut eligendi quis aut. Libero vel amet voluptatem eos rerum non doloremque. Dolores eum non.</p>
+                <p>We are extremely happy to welcome the Not Alone Pregnancy Center to our list of partners. For over 10 years this center has provided countless acts of kindness to pregnant women and children in Scott County. They have spent thousands of hours working so that expecting families in need might have support in their pregnancy.</p>
               </div>
             </div>
           </div>
@@ -121,16 +116,16 @@
               <div class="member-img">
                 <img src="img/team/team-3.png" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-facebook"></i></a>
+                  <a href=""><i class="icofont-twitter"></i></a>
                   <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href=""><i class="icofont-money"></i></a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>24000</h4>
                 <span>Georgetown Non-Profit</span>
-                <p>Ut enim possimus nihil cupiditate beatae. Veniam facere quae non qui necessitatibus rerum eos vero. Maxime sit sunt quo dolor autem est qui quaerat aliquid. Tenetur possimus qui enim.</p>
+                <p>24000 is a charity that we hold very near and dear. This organization works closely with representatives in Africa to help spread much needed supplies in the war against mosquito borne illness. They have branched out over the years to accommodate other basic human needs such as the supply of water and medicine. This is a wonderful non-profit that has family ties to the Georgetown area.</p>
               </div>
             </div>
           </div>
@@ -156,8 +151,8 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Refund Policy</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="refund.html">Refund Policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
             </ul>
           </div>
   
@@ -203,8 +198,8 @@
         &copy; Copyright <strong><span>zMarkup</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <a href="https://bootstrapmade.com/">Privacy</a> |
-        <a href="https://bootstrapmade.com/">Refund</a>
+        <a href="privacy.html">Privacy</a> |
+        <a href="refund.html">Refund</a>
       </div>
     </div>
   </footer><!-- End Footer -->
