--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="team.html">Partners</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -279,8 +278,8 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Refund Policy</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="refund.html">Refund Policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
             </ul>
           </div>
 
@@ -326,8 +325,8 @@
         &copy; Copyright <strong><span>zMarkup</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <a href="https://bootstrapmade.com/">Privacy</a> |
-        <a href="https://bootstrapmade.com/">Refund</a>
+        <a href="privacy.html">Privacy</a> |
+        <a href="refund.html">Refund</a>
       </div>
     </div>
   </footer><!-- End Footer -->
