--- a/services.html
+++ b/services.html
@@ -46,7 +46,6 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About Us</a></li>
           <li class="active"><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
           <li><a href="team.html">Partners</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
@@ -126,7 +125,7 @@
                 <img src="img/service-details-1.svg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="#">Our Mission</a></h5>
+                <h5 class="card-title"><a href="#">Our Clients</a></h5>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
                 <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
               </div>
@@ -138,7 +137,7 @@
                 <img src="img/service-details-2.svg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="#">Our Plan</a></h5>
+                <h5 class="card-title"><a href="#">Our Process</a></h5>
                 <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
                 <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
               </div>
@@ -162,7 +161,7 @@
                 <img src="img/service-details-3.svg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="#">Our Vision</a></h5>
+                <h5 class="card-title"><a href="#">Our Care</a></h5>
                 <p class="card-text">Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</p>
                 <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
               </div>
@@ -174,7 +173,7 @@
                 <img src="img/service-details-4.svg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="#">Our Care</a></h5>
+                <h5 class="card-title"><a href="#">Our Reputation</a></h5>
                 <p class="card-text">Nostrum eum sed et autem dolorum perspiciatis. Magni porro quisquam laudantium voluptatem. In molestiae earum ab sit esse voluptatem. Eos ipsam cumque ipsum officiis qui nihil aut incidunt aut</p>
                 <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
               </div>
@@ -194,46 +193,46 @@
 
         <div class="section-title">
           <h2>Pricing</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>No project is the same which causes the work required to fluctuate. Contact us below to schedule a consultation and get a project-unique quote!</p>
         </div>
 
         <div class="row no-gutters">
 
           <div class="col-lg-4 box">
             <h3>Basic</h3>
-            <h4>$<span>per website</span></h4>
+            <h4>$<span>website</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-              <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-              <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-              <li class="na"><i class="bx bx-x"></i> <span>Pharetra massa massa ultricies</span></li>
-              <li class="na"><i class="bx bx-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+              <li><i class="bx bx-check"></i> Logo Header</li>
+              <li><i class="bx bx-check"></i> Organized Information</li>
+              <li><i class="bx bx-check"></i> Pictures</li>
+              <li class="na"><i class="bx bx-x"></i> <span>Automated Services</span></li>
+              <li class="na"><i class="bx bx-x"></i> <span>Business Email</span></li>
             </ul>
             <a href="#" class="get-started-btn">Get Quote</a>
           </div>
 
           <div class="col-lg-4 box featured">
             <h3>Business</h3>
-            <h4>$$<span>per website</span></h4>
+            <h4>$$<span>website</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-              <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-              <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-              <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-              <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
+              <li><i class="bx bx-check"></i> Logo & Branding</li>
+              <li><i class="bx bx-check"></i> Photography Services</li>
+              <li><i class="bx bx-check"></i> Structured Content</li>
+              <li><i class="bx bx-check"></i> Unlimited Pictures</li>
+              <li><i class="bx bx-check"></i> Business Email</li>
             </ul>
             <a href="#" class="get-started-btn">Get Quote</a>
           </div>
 
           <div class="col-lg-4 box">
             <h3>eCommerce</h3>
-            <h4>$$$<span>per website</span></h4>
+            <h4>$$$<span>website</span></h4>
             <ul>
-              <li><i class="bx bx-check"></i> Quam adipiscing vitae proin</li>
-              <li><i class="bx bx-check"></i> Nec feugiat nisl pretium</li>
-              <li><i class="bx bx-check"></i> Nulla at volutpat diam uteera</li>
-              <li><i class="bx bx-check"></i> Pharetra massa massa ultricies</li>
-              <li><i class="bx bx-check"></i> Massa ultricies mi quis hendrerit</li>
+              <li><i class="bx bx-check"></i> Payment Processor</li>
+              <li><i class="bx bx-check"></i> Online Ordering App</li>
+              <li><i class="bx bx-check"></i> Analytic Reports</li>
+              <li><i class="bx bx-check"></i> Clean Product Storefront</li>
+              <li><i class="bx bx-check"></i> Basic & Business Class Included</li>
             </ul>
             <a href="#" class="get-started-btn">Get Quote</a>
           </div>
@@ -259,8 +258,8 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Refund Policy</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="refund.html">Refund Policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="privacy.html">Privacy policy</a></li>
             </ul>
           </div>
   
@@ -289,12 +288,6 @@
   
           <div class="col-lg-3 col-md-6 footer-info">
             <h3>Connect with us!</h3>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
           </div>
   
         </div>
@@ -306,8 +299,8 @@
         &copy; Copyright <strong><span>zMarkup</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <a href="https://bootstrapmade.com/">Privacy</a> |
-        <a href="https://bootstrapmade.com/">Refund</a>
+        <a href="privacy.html">Privacy</a> |
+        <a href="refund.html">Refund</a>
       </div>
     </div>
   </footer><!-- End Footer -->
