--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="carousel-container">
           <h2 class="animated fadeInDown">Welcome to <span>zMarkup</span></h2>
           <p class="animated fadeInUp">Hello, and welcome! We are a web design group based in Lexington, Kentucky.</p>
-          <a href="" class="btn-get-started animated fadeInUp">Read More</a>
+          <a href="about.html" class="btn-get-started animated fadeInUp">Get to know us</a>
         </div>
       </div>
 
@@ -73,7 +73,7 @@
         <div class="carousel-container">
           <h2 class="animated fadeInDown">Our Goal</h2>
           <p class="animated fadeInUp">Our goal is to personally represent local businesses and non-profits here in Central Kentucky. We aim to provide clients with the tools necessary to expand their customer base and enhance their  professional image.</p>
-          <a href="" class="btn-get-started animated fadeInUp">Read More</a>
+          <a href="services.html" class="btn-get-started animated fadeInUp">What we offer</a>
         </div>
       </div>
 
@@ -82,7 +82,7 @@
         <div class="carousel-container">
           <h2 class="animated fadeInDown">Community Focus</h2>
           <p class="animated fadeInUp">We are a community focused company. We are from this area and love to give back to our local charities! Read more below to see what charities we are affiliated with. </p>
-          <a href="" class="btn-get-started animated fadeInUp">Read More</a>
+          <a href="team.html" class="btn-get-started animated fadeInUp">Who we serve</a>
         </div>
       </div>
 
@@ -307,13 +307,6 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>Connect with us!</h3>
-            <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div>
           </div>
 
         </div>
