--- a/services.html
+++ b/services.html
@@ -126,8 +126,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Our Clients</a></h5>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
-                <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
+                <p class="card-text">It is the people that make this area great. Our community is what motivates us to produce great websites. Like you, we understand what it takes to run a business. We strive to put our clients needs first and deliver results quickly and efficiently.</p>
+                <!-- <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div> -->
               </div>
             </div>
           </div>
@@ -138,8 +138,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Our Process</a></h5>
-                <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
-                <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
+                <p class="card-text">Having a functional website is an extremely powerful tool. Our goal is match the perfect tool set to your business! With a brief consulation, we can help come up with a game plan that works for your situation.</p>
+                <!-- <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div> -->
               </div>
             </div>
             </div>
@@ -162,8 +162,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Our Care</a></h5>
-                <p class="card-text">Nemo enim ipsam voluptatem quia voluptas sit aut odit aut fugit, sed quia magni dolores eos qui ratione voluptatem sequi nesciunt Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet</p>
-                <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
+                <p class="card-text">We are a small tech company. Understand that we accept a limited number of clients. However, the clients we have mean the world to us! If you are tired of dealing with large corporations, lengthy customer-support lines and robot-like interactions, consult with us today.</p>
+                <!-- <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div> -->
               </div>
             </div>
           </div>
@@ -174,8 +174,8 @@
               </div>
               <div class="card-body">
                 <h5 class="card-title"><a href="#">Our Reputation</a></h5>
-                <p class="card-text">Nostrum eum sed et autem dolorum perspiciatis. Magni porro quisquam laudantium voluptatem. In molestiae earum ab sit esse voluptatem. Eos ipsam cumque ipsum officiis qui nihil aut incidunt aut</p>
-                <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div>
+                <p class="card-text">We specialize in small business and non-profit web design. We are known for having a friendly staff that loves going the extra mile for our clients. Please feel free to check our Google reviews!</p>
+                <!-- <div class="read-more"><a href="#"><i class="icofont-arrow-right"></i> Read More</a></div> -->
               </div>
             </div>
           </div>
@@ -287,7 +287,6 @@
           </div>
   
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>Connect with us!</h3>
           </div>
   
         </div>
