--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             <p>Recieve up to date information on how our services could benefit your business!</p>
           </div>
           <div class="col-lg-6">
-            <form action="" method="post">
+            <form id="newsletter" action="/thank.html" method="post" data-netlify="true">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
           </div>
