--- a/services.html
+++ b/services.html
@@ -208,7 +208,7 @@
               <li class="na"><i class="bx bx-x"></i> <span>Automated Services</span></li>
               <li class="na"><i class="bx bx-x"></i> <span>Business Email</span></li>
             </ul>
-            <a href="#" class="get-started-btn">Get Quote</a>
+            <a href="contact.html" class="get-started-btn">Get Quote</a>
           </div>
 
           <div class="col-lg-4 box featured">
@@ -221,7 +221,7 @@
               <li><i class="bx bx-check"></i> Unlimited Pictures</li>
               <li><i class="bx bx-check"></i> Business Email</li>
             </ul>
-            <a href="#" class="get-started-btn">Get Quote</a>
+            <a href="contact.html" class="get-started-btn">Get Quote</a>
           </div>
 
           <div class="col-lg-4 box">
@@ -234,7 +234,7 @@
               <li><i class="bx bx-check"></i> Clean Product Storefront</li>
               <li><i class="bx bx-check"></i> Basic & Business Class Included</li>
             </ul>
-            <a href="#" class="get-started-btn">Get Quote</a>
+            <a href="contact.html" class="get-started-btn">Get Quote</a>
           </div>
 
         </div>
