--- a/refund.html
+++ b/refund.html
@@ -148,8 +148,8 @@
         &copy; Copyright <strong><span>zMarkup</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
-        <a href="https://bootstrapmade.com/">Privacy</a> |
-        <a href="https://bootstrapmade.com/">Refund</a>
+        <a href="privacy.html">Privacy</a> |
+        <a href="refund.html">Refund</a>
       </div>
     </div>
   </footer><!-- End Footer -->
