--- a/privacy.html
+++ b/privacy.html
@@ -62,7 +62,7 @@
       <div class="content">
          <article class="announcement"  data-post-date="3/27/2020"><div class="sticky">
            
-               <h2>Refund Policy</h2>
+               <h2>Privacy Policy</h2>
          </div>
            <div class="art-text">
              
