--- a/index.html
+++ b/index.html
@@ -1,13 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <!-- Metadata -->
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
+<html lang ="en" class="no-js">
+  <head>
+    <!-- meta start -->
+  <meta charset="UTF-8">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="profile" href="https://gmpg.org/xfn/11">
   <title>zMarkup | Web Design</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="geo.placename" content="Lexington">
+  <meta name="geo.position" content="37.9886894;-84.4777222">
+  <meta name="geo.region" content="US">
+  <meta name="description" content="A website development group based in Lexington, KY. We specialize in optimizing business websites. Check out our new services today!">
+  
+  <link rel="canonical" href="https://zmarkup.com/">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="place:location:latitude" content="37.9886894">
+  <meta property="place:location:longitude" content="-84.4777222">
+  <meta property="business:contact_data:street_address" content="PO Box 24824">
+  <meta property="business:contact_data:locality" content="Lexington">
+  <meta property="business:contact_data:country_name" content="United States (US)">
+  <meta property="business:contact_data:postal_code" content="40524">
+  <meta property="business:contact_data:website" content="https://zmarkup.com/">
+  <meta property="business:contact_data:region" content="Kentucky">
+  <meta property="business:contact_data:email" content="info@zmarkup.com">
+  <meta property="business:contact_data:phone_number" content="8594893261">
+  <meta property="og:title" content="zMarkup - Web Design Made Easy">
+  <meta property="og:description" content="A website development group based in Lexington, KY. We specialize in optimizing business websites. Check out our new services today!">
+  <meta property="og:url" content="https://zmarkup.com/">
+  <meta property="og:site_name" content="zMarkup - Web Design Made Easy">
+  <meta property="og:image" content="http://www.zmarkup.com/img/logo.png">
+  <meta property="og:image:secure_url" content="http://www.zmarkup.com/img/logo.png">
+  <meta property="og:image:width" content="1024">
+  <meta property="og:image:height" content="576">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:description" content="A website development group based in Lexington, KY. We specialize in optimizing business websites. Check out our new services today!">
+  <meta name="twitter:title" content="zMarkup - Web Design Made Easy">
+  <meta name="twitter:image" content="http://www.zmarkup.com/img/logo.png">
+    <!-- meta end -->
 
   <!-- Favicons -->
   <link href="img/logo.png" rel="icon">
