--- a/about.html
+++ b/about.html
@@ -78,7 +78,7 @@
 
         <div class="row">
           <div class="col-lg-6">
-            <img src="img/kentucky.jpg" class="img-fluid" alt="">
+            <img src="img/kentucky.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <h2 class= "text-center"><u>Welcome!</u></h2>
