--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
         <div class="row">
           <div class="col-lg-6 video-box">
-            <img src="img/kentucky.jpg" class="img-fluid" alt="">
+            <img src="img/kentucky.png" class="img-fluid" alt="" loading="lazy">
             <a href="https://www.youtube.com/watch?v=MpKzc_6sw3U" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
